external-crates/move/crates/move-compiler/tests/move_2024/expansion/friend_decl_aliased_struct.move
address 0x42 {
module M {
    public struct M {}
}

module N {
    use 0x42::M::M;
    friend M;

    public(friend) fun m(_b: M) {}
}
}
